--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "html2canvas": "^1.4.1",
+    "lockfile-light": "^1.0.4",
     "lucide-react": "^0.260.0",
+    "moodie": "^1.1.1",
     "nanoid": "^5.0.1",
     "next": "13.4.10",
     "photo-sphere-viewer-lensflare-plugin": "^1.1.1",
     "pick": "^0.0.1",
     "postcss": "8.4.26",
-    "random-avatar-generator": "^2.0.0",
     "react": "18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
@@ -67,6 +68,7 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
+    "temp-dir": "^3.0.0",
     "tesseract.js": "^4.1.2",
     "ts-node": "^10.9.1",
     "typescript": "5.1.6",
