working on image generation

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@
 # which will be mounted on "/data", but if you run in local you can just use "./sandbox":
 # STORAGE_PATH="/data"
 STORAGE_PATH="./sandbox"
+
+HF_API_TOKEN="<REPLACE_THIS>"
+HF_INFERENCE_ENDPOINT="https://.................aws.endpoints.huggingface.cloud"
