fixed the party loop

--- a/.env
+++ b/.env
@@ -5,4 +5,5 @@
 STORAGE_PATH="./sandbox"
 
 HF_API_TOKEN="<REPLACE_THIS>"
-HF_INFERENCE_ENDPOINT="https://.................aws.endpoints.huggingface.cloud"
+HF_INFERENCE_ENDPOINT=""
+HF_INFERENCE_API_MODEL="stabilityai/stable-diffusion-xl-base-1.0"
